--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cloud_firestore: ^4.4.4
   firebase_auth: ^4.2.10
   firebase_storage: ^11.0.15
+  cupertino_icons: ^1.0.5
   flutter:
     sdk: flutter
 
